log
Thu 09 May 2024 06:15:24 PM UTC: 
 tests:  1|8
total_score: 0/70
60c5388
Thu 09 May 2024 06:17:27 PM UTC: 
 treemap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
942d82a
Thu 09 May 2024 06:32:30 PM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++--
 1 file changed, 34 insertions(+), 2 deletions(-)
 tests:  3|7
total_score: 5/70
0d433ad
Thu 09 May 2024 06:53:04 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
83de6c1
Thu 09 May 2024 06:59:58 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|6
total_score: 15/70
e9d16de
Thu 09 May 2024 07:00:08 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
78b9f66
Thu 09 May 2024 07:01:05 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
95a0101
Thu 09 May 2024 07:03:12 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
fb161dc
Thu 09 May 2024 07:17:58 PM UTC: 
 treemap.c | 55 ++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 54 insertions(+), 1 deletion(-)
 tests:  0|0
3e7e78a
Thu 09 May 2024 07:18:42 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
76e8151
Thu 09 May 2024 07:19:09 PM UTC: 
 treemap.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
 tests:  13|5
total_score: 20/70
c7bf13f
Thu 09 May 2024 07:21:27 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
27ef425
Thu 09 May 2024 07:22:58 PM UTC: 
 treemap.c | 32 +++-----------------------------
 1 file changed, 3 insertions(+), 29 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:100:13: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  100 |             if(node->parent->right == node) node->parent->right = NULL; free(node);
      |             ^~
treemap.c:100:73: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  100 |             if(node->parent->right == node) node->parent->right = NULL; free(node);
      |                                                                         ^~~~
treemap.c:103:13: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  103 |             if(node->parent->right == node) node->parent->right = node->left; free(node);
      |             ^~
treemap.c:103:79: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  103 |             if(node->parent->right == node) node->parent->right = node->left; free(node);
      |                                                                               ^~~~
treemap.c:106:13: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  106 |             if(node->parent->right == node) node->parent->right = node->right; free(node);
      |             ^~
treemap.c:106:80: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  106 |             if(node->parent->right == node) node->parent->right = node->right; free(node);
      |                                                                                ^~~~
cc1: all warnings being treated as errors
Compilation failed
97b9b72
Thu 09 May 2024 07:23:39 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:101:13: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  101 |             if(node->parent->right == node) node->parent->right = NULL; free(node);
      |             ^~
treemap.c:101:73: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  101 |             if(node->parent->right == node) node->parent->right = NULL; free(node);
      |                                                                         ^~~~
treemap.c:106:13: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  106 |             if(node->parent->right == node) node->parent->right = node->left; free(node);
      |             ^~
treemap.c:106:79: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  106 |             if(node->parent->right == node) node->parent->right = node->left; free(node);
      |                                                                               ^~~~
treemap.c:111:13: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  111 |             if(node->parent->right == node) node->parent->right = node->right; free(node);
      |             ^~
treemap.c:111:80: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  111 |             if(node->parent->right == node) node->parent->right = node->right; free(node);
      |                                                                                ^~~~
cc1: all warnings being treated as errors
Compilation failed
2510c2a
Thu 09 May 2024 07:25:13 PM UTC: 
 treemap.c | 33 +++++++++++++++++++++++++++------
 1 file changed, 27 insertions(+), 6 deletions(-)
 tests:  13|5
total_score: 20/70
4c17059
Thu 09 May 2024 07:27:30 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  13|5
total_score: 20/70
3ead30e
Thu 09 May 2024 08:01:13 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  13|5
total_score: 20/70
d37b807
Thu 09 May 2024 08:04:31 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
 tests:  13|5
total_score: 20/70
12f677f
Thu 09 May 2024 08:05:02 PM UTC: 
 treemap.c | 55 -------------------------------------------------------
 1 file changed, 55 deletions(-)
 tests:  13|5
total_score: 20/70
b7776d4
Thu 09 May 2024 08:06:16 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  13|5
total_score: 20/70
e333622
Thu 09 May 2024 08:09:32 PM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  13|5
total_score: 20/70
3781212
Thu 09 May 2024 09:09:42 PM UTC: 
 treemap.c | 41 ++++++++++++++++++++++++++++-------------
 1 file changed, 28 insertions(+), 13 deletions(-)
 tests:  13|5
total_score: 20/70
7275038
Thu 09 May 2024 09:11:11 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 20/70
d51afa9
Thu 09 May 2024 09:21:49 PM UTC: 
 treemap.c | 49 +++++++++++++++++++------------------------------
 1 file changed, 19 insertions(+), 30 deletions(-)
 tests:  15|4
total_score: 30/70
188982c
Thu 09 May 2024 09:25:39 PM UTC: 
 treemap.c | 39 +++++++++++++++++++++------------------
 1 file changed, 21 insertions(+), 18 deletions(-)
 tests:  15|4
total_score: 30/70
a8b5583
Thu 09 May 2024 09:27:20 PM UTC: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  15|4
total_score: 30/70
b7f7163
Thu 09 May 2024 09:37:40 PM UTC: 
 treemap.c | 42 +++++++++++++++++-------------------------
 1 file changed, 17 insertions(+), 25 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:16: error: too few arguments to function ‘is_equal’
   59 |             if(is_equal(key, aux->pair->key) == 1) return;
      |                ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
31190dd
Thu 09 May 2024 09:38:04 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fe911ac
Thu 09 May 2024 09:39:30 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
de55163
